fixing bad css/html

--- a/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/articles/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -13,14 +13,13 @@
 <div class="center">
     <img class="konata-typing" src="./assets/konata-typing.gif">
 </div>
-<p class="quote">“Can I learn to code?”</p>
-<p>Anton Ego puts it best: “Not everyone can become a great artist, but a great artist can come from anywhere.” You
+<p class="indent"><q>Can I learn to code?</q></p>
+<p>Anton Ego puts it best: <q>Not everyone can become a great artist, but a great artist can come from anywhere.</q> You
     don’t have to be young, smart, or talented to get into coding. It’s more of a mindset and general interest in the
     field.</p>
 <p>If you can’t sit down at a computer for 4 hours and not get horribly depressed, or if encountering roadblocks upsets
     you, do us all a favor and avoid coding. Know yourself, no salary is worth your mental wellbeing. </p>
-<p class="quote">“Do you need a degree to get a job?”
-</p>
+<p class="indent"><q>Do you need a degree to get a job?</q></p>
 <p>Not necessarily! I’m not going to blow hot air up your butt and tell you it's not a huge boon to have a degree on
     your resume, but recently it's becoming less important. Big companies like Meta, Google, and Amazon care more about
     what you know. My recommendation is that if you are college-bound anyway or just starting your degree to consider
@@ -32,14 +31,14 @@
     there is overlap between the two, but a lot of your time will be spent on ideas and not head-down practice. In the
     long run having this deep theoretical knowledge will help, but it's not necessary to get a rewarding job or work on
     meaningful projects.</p>
-<p class="quote">“What about code camps/self-taught?”</p>
+<p class="indent"><q>What about code camps/self-taught?</q></p>
 <p>Code camps are often scams. The first thing you should be asking a code camp recruiter is the % placement in jobs
     immediately after graduating. Anything other than an enthusiastic answer is a red flag. Definitely consider this
     option as an adult learner, but use good judgment before signing up anywhere.</p>
 <p>Self-taught coworkers of mine are incredibly good at what they do. My guess as to why is that they have lots of
     willpower. I tacitly recommend this route because you have to be pretty big-brained to make it on your own. However,
     if you are the type of person that can motivate themselves this is a rewarding route.</p>
-<p class="quote">“How do I get started today?”</p>
+<p class="indent"><q>How do I get started today?</q></p>
 <p>Some people recommend starting with <a href="https://www.codecademy.com/">CodeAcademy</a>. I feel that it's a good
     hour-long test to see if you have the basic
     logic and desire to be a programmer. </p>
