--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,10 +1,8 @@
-<div class="footer">
-    <div class="container">
-        <hr>
-        <div>
-            <span><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Back to home</a></span>
-            <span> | </span>
-            <span>mdsparks17@gmail.com</span> 
-        </div>
+<footer>
+    <hr>
+    <div>
+        <span><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Back to home</a></span>
+        <span> | </span>
+        <span>mdsparks17@gmail.com</span>
     </div>
-</div>
+</footer>
