--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,7 @@
-<header [class]="isMobil">
-    <div class="row center">
-        <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
-            <img class="logo" src="./assets/Logo.png">
-        </a>
-    </div>
+<header>
+    <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
+        <img class="logo" src="./assets/Logo.png">
+    </a>
     <nav>
         <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
             <button class="button ">About</button></a>
