--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,5 +1,3 @@
-<div class="content">
-    <div class="container">
-        <router-outlet></router-outlet>
-    </div>
-</div>
+<main>
+    <router-outlet></router-outlet>
+</main>
