--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,33 +1,12 @@
 @import "/src/variables";
 
-.footer {
+footer {
     display: flex;
     justify-content: center;
-    
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-}
-
-// @media only screen and (max-width: 750px) {
-//     .footer {
-//     }
-    
-// }
-// @media only screen and (min-width: 750px) {
-//     .footer {
-//         width: 750px;
-//     }
-// }
-
-.container {
-    display: flex;
     flex-direction: column;
     align-items: center;
 
-    height: 80px;
-    width: 100%;
-
-    margin: 0 5px 0 5px;
+    height: 100px;
 }
 
 a { font-family: $font; color: $white; text-decoration: underline; }
