--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,32 +1,27 @@
 @import "/src/variables";
 
-.web-align {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    padding: 0 20px 0 20px;
-    width: 750px;
-    height: 80px;
+@media only screen and (max-width: 750px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
-.mobile-align {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@media only screen and (min-width: 750px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 750px;
+        height: 80px;
+    }
 }
 
 a {
     font-family: $font;
     color: $white;
     text-decoration: none;
-}
-
-header {
-    display: flex;
-    justify-content: center;
-
-    width: 100%;
 }
 
 nav {
@@ -36,22 +31,17 @@ nav {
     align-items: center;
 }
 
-.logo {
-    margin: 0 10px 0 0;
-    width: 100%;
-}
+.logo { width: 100%; }
 
 .button {
     display: flex;
     justify-content: center;
     align-items: center;
 
-    margin: 0 0 0 0;
+    margin: 2px 2px 2px 2px;
     padding: 8px 8px 8px 8px;
     border: none;
     border-radius: 8px;
-    width: 75px;
-    height: 32px;
 
     background-color: $dark-4;
     color: $white;
@@ -61,10 +51,6 @@ nav {
     transition-duration: 0.3s;
 }
 
-.button:hover {
-    background-color: $dark-2;
-}
+.button:hover { background-color: $dark-2; }
 
-.button:active {
-    background-color: $dark-1;
-}
+.button:active { background-color: $dark-1; }
