--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -1,5 +1,3 @@
-<!-- <div class="article"> -->
-    <app-header></app-header>
-    <app-content></app-content>
-    <app-footer class="fill"></app-footer>
-<!-- </div> -->
+<app-header></app-header>
+<app-content></app-content>
+<app-footer></app-footer>
