fixing style variables

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,7 +9,7 @@ footer {
     height: 100px;
 }
 
-a { font-family: $font; color: $white; text-decoration: underline; }
+a { font-family: $font; color: $text; text-decoration: underline; }
 
-a:hover { color: $offwhite; }
+a:hover { color: $hover; }
 
