--- a/src/styles.scss
+++ b/src/styles.scss
@@ -110,7 +110,7 @@ q {
 
 .row {
     display: flex;
-    flex-direction: row;
+    flex-flow: row;
     justify-content: center;
     align-items: center;
     margin: 0 0 0 0;
@@ -169,12 +169,12 @@ q {
     flex-direction: column;
     justify-content: center;    
 
-    margin: 20px 0 20px 0;
+    // margin: 20px 0 20px 0;
 
     padding: 0 10px 0 10px;
 
     height: 100px;
-    width: 100%;
+    width: 90%;
     border-left: solid 2px;
     border-radius: 8px;
 
