rethinking page structure

--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <h2>{{ mypage?.name }}</h2>
 <div class="meta-text orient-left">
     <span>{{ mypage?.metadata?.lastUpdatedTimestamp }}</span>
@@ -31,3 +33,4 @@
     </div>
     <img class="pennletter" src="./assets/pennletter.gif">
 </div>
+
