--- a/src/app/pages/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/pages/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <h2>{{ mypage?.name }}</h2>
 <div class="meta-text orient-left">
     <span>{{ mypage?.metadata?.lastUpdatedTimestamp }}</span>
