--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,3 +1,5 @@
+<app-header></app-header>
+
 <h2>Search</h2>
 <hr>
 
@@ -14,3 +16,5 @@
         </div>
     </a>
 </div>
+
+<app-footer></app-footer>
