--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
-        <img class="logo" src="./assets/Logo.png">
+        <img class="logo" src="./assets/images/Logo.png">
     </a>
     <nav>
         <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
