--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
 <hr>
 
 <div class="row">
-    <img class="bmo" src="./assets/bmo.gif">
+    <img class="bmo" src="./assets/images/bmo.gif">
 </div>
 
 <div *ngFor="let page of mypages.pages">
