--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,1 +1,6 @@
-<p>page-not-found works!</p>
+<div class="center column">
+    <img class="neco-shrug" src="./assets/images/neco-shrug.gif">
+    <h1>404: Page not available</h1>
+    <a routerLink="" routerLinkActive="active" ariaCurrentWhenActive="page">Return Home</a>
+</div>
+
