--- a/src/styles.scss
+++ b/src/styles.scss
@@ -172,6 +172,7 @@ q {
     // margin: 20px 0 20px 0;
 
     padding: 0 10px 0 10px;
+    margin: 0 0 10px 0;
 
     height: 100px;
     width: 90%;
