--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -7,7 +7,7 @@
         <p>This is my personal site for anything I feel like publishing or blabbing about. I plan to upload some of my
             projects, hobbies, comments, blogs, listicles, and generally anything I find of interest.</p>
     </div>
-    <img class="arizona" src="./assets/arizona-spin.gif">
+    <img class="arizona" src="./assets/images/arizona-spin.gif">
 </div>
 <h3>About Me</h3>
 <p>IRL my name is Michael Sparks (he/him 24), I am a fullstack software developer by trade. I have a degree in CS from
@@ -24,7 +24,7 @@
             to say.</p>
         <p><i>mdsparks17@gmail.com</i></p>
     </div>
-    <img class="pennletter" src="./assets/pennletter.gif">
+    <img class="pennletter" src="./assets/images/pennletter.gif">
 </div>
 
 <app-footer></app-footer>
