--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -17,6 +17,11 @@
 <p>Here is my <a
         href="https://docs.google.com/document/d/1ExJf9ano_Tjz9qf-JrbyViGa9_34G_d2Z6-eE4NroQE/edit?usp=sharing">Professional
         Resume</a></p>
+
+<h3>Why "ThePlug"?</h3>
+<p>Since this was originally planned to be a professional personal site, I wanted to have some pun based off my last
+    name 'Sparks'. Sparkle? Spark... something? Spark Plug? Eventually I just landed on 'ThePlug'. I think it works. </p>
+
 <div class="row">
     <div>
         <h3>How to Contact</h3>
@@ -28,4 +33,3 @@
 </div>
 
 <app-footer></app-footer>
-
