--- a/src/app/pages/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/pages/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-title myPageName='How to Become a Software Developer'></app-title>
+<app-title myPageName="How to Become a Software Developer"></app-title>
 
 <h3>So you want to become a software developer?</h3>
 <p>Makes sense, a lot of people see software dev as their ticket to a 6-figure salary. But it’s not as simple as taking
@@ -34,15 +34,15 @@
     willpower. I tacitly recommend this route because you have to be pretty big-brained to make it on your own. However,
     if you are the type of person that can motivate themselves this is a rewarding route.</p>
 <p class="indent"><q>How do I get started today?</q></p>
-<p>Some people recommend starting with <a href="https://www.codecademy.com/">CodeAcademy</a>. I feel that it's a good
+<p>Some people recommend starting with <a href="https://www.codecademy.com/" target="_blank">CodeAcademy</a>. I feel that it's a good
     hour-long test to see if you have the basic
     logic and desire to be a programmer. </p>
-<p>Past that I would STRONGLY recommend looking over <a href="https://roadmap.sh/">https://roadmap.sh/</a> and
+<p>Past that I would STRONGLY recommend looking over <a href="https://roadmap.sh/" target="_blank">https://roadmap.sh/</a> and
     researching each path and what they do.
     Think of some projects you would like to do and dive into one of these learning paths. Bonus points if you upload
     proof-of-concepts, demos, and investigative projects for any of the topics listed.</p>
 <p>If you would like to get into the IT side of things, I would recommend looking over
-    <a href="https://i.redd.it/lni6tgghq0z21.jpg">https://i.redd.it/lni6tgghq0z21.jpg</a> as a general certificate guide
+    <a href="https://i.redd.it/lni6tgghq0z21.jpg" target="_blank">https://i.redd.it/lni6tgghq0z21.jpg</a> as a general certificate guide
     as you explore through that side of tech.
     Certifications are always great, and as a software dev having awareness of IT can certainly set you apart.
 </p>
