--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,12 @@
 <header>
     <a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">
-        <img class="logo" src="./assets/images/Logo.png">
+        <img class="logo theme" src="./assets/images/Logo.png">
     </a>
     <nav>
         <a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">
             <button class="button ">About</button></a>
+        <a routerLink="/sitemap" routerLinkActive="active" ariaCurrentWhenActive="page">
+            <button class="button ">SiteMap</button></a>
         <a routerLink="/search" routerLinkActive="active" ariaCurrentWhenActive="page">
             <button class="button ">Search</button></a>
     </nav>
