--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -43,7 +43,7 @@ nav {
     border: none;
     border-radius: 8px;
 
-    background-color: $background;
+    background-color: transparent;
     color: $text;
     font-family: $font;
     font-size: 16px;
