--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,7 @@ body {
     background-color: $background;
 
     // TODO: find a fun background image
-    // background-image: url("./assets/bg.png");
+    // background-image: url("./assets/images/bg.jpg");
     // background-size: cover;
     // background-position: bottom;
     // background-attachment: fixed;
@@ -23,8 +23,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: stretch;
+
     
     width: 100%;
+}
+
+.content {
+    // background-color: $background;
+    border-radius: 4px;
+    margin: 10px;
 }
 
 @media only screen and (max-width: 750px) {
@@ -50,7 +57,7 @@ p {
     color: $text;
     font-size: 16px;
     margin: 0 0 0 0;
-    padding: 15px 0 15px 0;
+    padding: 10px 0 10px 0;
     line-height: 20px;
 }
 
@@ -77,7 +84,7 @@ h3 {
     color: $text;
     font-size: 20px;
     margin: 0 0 0 0;
-    padding: 15px 0 15px 0;
+    padding: 10px 0 10px 0;
 }
 
 q {
