--- a/src/app/pages/anime/anime.component.html
+++ b/src/app/pages/anime/anime.component.html
@@ -14,7 +14,7 @@
 <h3>Entry-Level Watches</h3>
 <p>For new anime watchers or convincing your friends that some anime aren't all trash.</p>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/one-punch-man.jpg">
     <div class="column description">
         <h3>One Punch Man</h3>
@@ -24,7 +24,7 @@
     </div>
 </div>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/mob-psycho-100.jpg">
     <div class="column description">
         <h3>Mob Psycho 100</h3>
@@ -34,7 +34,7 @@
     </div>
 </div>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/fma-b.jpg">
     <div class="column description">
         <h3>Fullmetal Alchemist: Brotherhood</h3>
@@ -47,7 +47,7 @@
 <h3>Feel-Good Anime</h3>
 <p>For when you need a break/something light to watch with a partner.</p>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/yuri-on-ice.jpg">
     <div class="column description">
         <h3>Yuri On Ice</h3>
@@ -55,7 +55,7 @@
     </div>
 </div>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/ohshc.jpg">
     <div class="column description">
         <h3>Ouran High School Host Club</h3>
@@ -64,7 +64,7 @@
     </div>
 </div>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/saiki-k.jpg">
     <div class="column description">
         <h3>Saiki K</h3>
@@ -76,7 +76,7 @@
 <h3>Nerd Picks</h3>
 <p>If you like searching "what did this mean?" after watching something then you might like these.</p>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/serial-experiments-lain.jpg">
     <div class="column description">
         <h3>Serial Experiments Lain</h3>
@@ -85,7 +85,7 @@
     </div>
 </div>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/neon-genesis.jpg">
     <div class="column description">
         <h3>Neon Genesis Evangelion</h3>
@@ -98,7 +98,7 @@
 <p>You might think these are hot garbage, and they probably are! Either way, these are my soapbox nominations for
     secretly being good.</p>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/black-lagoon.jpg">
     <div class="column description">
         <h3>Black Lagoon</h3>
@@ -107,7 +107,7 @@
     </div>
 </div>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/overlord.jpg">
     <div class="column description">
         <h3>Overlord</h3>
@@ -116,7 +116,7 @@
     </div>
 </div>
 
-<div class="showcase orient-left">
+<div class="spacer orient-left">
     <img class="poster" src="./assets/images/hellsing-ultimate.jpg">
     <div class="column description">
         <h3>Hellsing Ultimate</h3>
