--- a/src/app/pages/anime/anime.component.scss
+++ b/src/app/pages/anime/anime.component.scss
@@ -1,12 +1,9 @@
 .poster {
     width: 38%;
+    height: 76%;
 }
 
 .description {
     width: 60%;
-    padding: 0 1% 0 1%;
-}
-
-.showcase {
-    margin: 10px 0 10px 0;
+    padding: 0 1rem 0 1rem;
 }
