--- a/src/app/pages/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
+++ b/src/app/pages/how-to-become-a-software-developer/how-to-become-a-software-developer.component.html
@@ -6,7 +6,7 @@
     a class or 2 and getting a junior role at Google. The field is tough to get a grasp of. Even people in-field like
     yours truly have a hard time seeing the forest for the trees. Let's dive into some basics. </p>
 <div class="center">
-    <img class="konata-typing" src="./assets/images/konata-typing.gif">
+    <img class="konata-typing spacer" src="./assets/images/konata-typing.gif">
 </div>
 <p class="indent"><q>Can I learn to code?</q></p>
 <p>Anton Ego puts it best: <q>Not everyone can become a great artist, but a great artist can come from anywhere.</q> You
