--- a/src/variables.scss
+++ b/src/variables.scss
@@ -21,7 +21,7 @@ $hover: #181818;     // hover text
 $primary3: #52554d;       // active
 $primary2: #ced6c2;       // hover
 $primary: #bec5b9;       // component background
-$background: #f9ffe0;       // background
+$background: #fff8eb;       // background
 
 $yellow: #B47304;       
 $orange: #A53E12;
