--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -6,7 +6,7 @@ footer {
     flex-direction: column;
     align-items: center;
 
-    height: 100px;
+    height: 6rem;
 }
 
 a { font-family: $font; color: $text; text-decoration: underline; }
