--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -14,7 +14,7 @@
         justify-content: space-between;
         align-items: center;
         width: 750px;
-        height: 80px;
+        height: 6rem;
     }
 }
 
@@ -31,26 +31,9 @@ nav {
     align-items: center;
 }
 
-.logo { width: 100%; }
-
 .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    margin: 2px 2px 2px 2px;
-    padding: 8px 8px 8px 8px;
-    border: none;
-    border-radius: 8px;
-
-    background-color: transparent;
-    color: $text;
-    font-family: $font;
-    font-size: 16px;
-
-    transition-duration: 0.3s;
+    height: 2rem;
+    width: 5rem;
+    font-size: 1rem;
+    padding: .25rem .25rem .25rem .25rem;
 }
-
-.button:hover { background-color: $primary2; }
-
-.button:active { background-color: $primary3; }
