--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@ body {
     // background-position: bottom;
     // background-attachment: fixed;
     margin: 0 0 0 0;
-    padding: 0 5px 0 5px;
+    padding: 0 1rem 0 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,30 +23,30 @@ body {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-
     
     width: 100%;
 }
 
 .content {
-    // background-color: $background;
     border-radius: 4px;
-    margin: 10px;
 }
 
-@media only screen and (max-width: 750px) {
-    .fill {
-        width: 100%;
-    }
+@media only screen and (max-width: 750px) { .fill { width: 100%; } }
+
+@media only screen and (min-width: 750px) { .fill { width: 750px; } }
+
+a { 
+    font-family: $font; 
+    color: $blue; 
+    text-decoration: underline; 
+    
+    margin: 0;
+    padding: 0;
 }
 
-@media only screen and (min-width: 750px) {
-    .fill {
-        width: 750px;
-    }
+img {
+    vertical-align:bottom;
 }
-
-a { font-family: $font; color: $blue; text-decoration: underline; }
 
 a:hover { color: $hover; }
 
@@ -55,10 +55,10 @@ div { color: $text; font-family: $font; }
 p {
     font-family: $font;
     color: $text;
-    font-size: 16px;
-    margin: 0 0 0 0;
-    padding: 10px 0 10px 0;
-    line-height: 20px;
+    font-size: 1rem;
+    margin: 0;
+    padding: 1rem 0 1rem 0;
+    line-height: 1.25rem;
 }
 
 hr {
@@ -66,15 +66,16 @@ hr {
     border: none;
     height: 1px;
     background-color: $text;
-    border-radius: 8px;
+    border-radius: 4px;
 
-    margin-bottom: 15px;
+    margin: 1rem 0 1rem 0;
+    padding: 0;
 }
 
 h2 {
     font-family: $font;
     color: $text;
-    font-size: 32px;
+    font-size: 2rem;
     margin: 0;
     padding: 0;
 }
@@ -82,9 +83,9 @@ h2 {
 h3 {
     font-family: $font;
     color: $text;
-    font-size: 20px;
+    font-size: 1.5rem;
     margin: 0 0 0 0;
-    padding: 10px 0 10px 0;
+    padding: 1rem 0 1rem 0;
 }
 
 q {
@@ -99,10 +100,10 @@ q {
 .indent {
     font-family: $font;
     color: $text;
-    font-size: 16px;
-    margin: 15px 0 15px 0;
-    padding: 5px 0 5px 0;
-    line-height: 15px;
+    font-size: 1rem;
+    margin: 1rem 0 1rem 1rem;
+    padding: 0 0 0 .5rem;
+    line-height: 1rem;
     border-left: 1px solid;
     border-color: $green;
 }
@@ -111,8 +112,8 @@ q {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: 0;
+    padding: 0;
 }
 
 .row {
@@ -120,22 +121,27 @@ q {
     flex-flow: row;
     justify-content: center;
     align-items: center;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    margin: 0;
+    padding: 0;
 }
 
 .orient-left {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 .center {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.spacer {
+    padding: 1rem 0 1rem 0;
 }
 
 .meta-text {
@@ -158,33 +164,28 @@ q {
 // CUSTOMIZATION
 
 // scrollbar
-::-webkit-scrollbar { width: 10px; }
+::-webkit-scrollbar { width: .5rem; }
 
 ::-webkit-scrollbar-track { background: $background; }
 
-::-webkit-scrollbar-thumb { background: $primary3; border-radius: 4px; margin: 4px 0 4px 0; }
+::-webkit-scrollbar-thumb { background: $primary3; border-radius: 4px; }
 
 ::-webkit-scrollbar-thumb:hover { background: $hover; }
 
 // highlight
-
 ::selection { background-color: $hover; color: $background; }
 
 // UTILITIES
+
 .card {
     display: flex;
     flex-direction: column;
     justify-content: center;    
 
-    // margin: 20px 0 20px 0;
-
-    padding: 0 10px 0 10px;
-    margin: 0 0 10px 0;
-
-    height: 100px;
-    width: 90%;
-    border-left: solid 2px;
-    border-radius: 8px;
+    width: 100%;
+    padding: 1rem 0 1rem 1rem;
+    // border-left: solid 2px;
+    // border-radius: 8px;
 
     transition-duration: 0.3s;
 }
@@ -195,4 +196,23 @@ q {
 
 .card:active {
     background-color: $primary3;
+}
+
+.button {
+  background-color: transparent;
+  border: 0px solid $primary3;
+  border-radius: 4px;
+//   box-shadow: $primary3 2px 2px 0 0;
+  color: $text;
+  cursor: pointer;
+//   margin: 4px 4px 4px 4px;
+
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button:hover {
+  background-color: $primary2;
 }
